Refactor: Local-only workflow, simplified logic, removed heavy assets

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,11 @@ onnxruntime
 resampy
 einops
 git+https://github.com/shimhz/SRMRpy.git
-git+https://github.com/AndreevP/wvmos.git
+transformers
+pytorch-lightning
+tqdm
+librosa
+soundfile
 # Local packages / Internal Dependencies
 # srmrpy and others are assumed to be in the repo structure.
 # But for Streamlit Cloud to find them, we might need to add them to PYTHONPATH or structure them as packages.
